[package]
name = "uic-ticket-decode"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4.4", features = ["derive"] }
flate2 = { version = "1.0" }
nom = { version = "7.1" }
num-bigint = { version = "0.4" }
once_cell = { version = "1.17" }
rxing = { version = "0.4" }
