[package]
name = "uic-ticket-decode"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22" }
chrono = { version = "0.4" }
clap = { version = "4.4", features = ["derive"] }
der = { version = "0.7", features = ["derive"] }
digest = { version = "0.10" }
dsa = { version = "0.6" }
ecdsa = { version = "0.16", features = ["verifying"] }
flate2 = { version = "1.0" }
nom = { version = "7.1" }
num-bigint = { version = "0.4" }
once_cell = { version = "1.19" }
p256 = { version = "0.13" }
png = { version = "0.17" }
rand = { version = "0.8" }
rxing = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha1 = { version = "0.10" }
sha2 = { version = "0.10" }
signature = { version = "2.2" }
sxd-document = { version = "0.3" }
x509-cert = { version = "0.2" }
